# ark_navigator

./: .env.sample  .gitignore  Dockerfile  README.md  changed_files.txt  pyproject.toml
docs/: ENVIRONMENT.md  ylx_navi_flow.html
scripts/: init_knowledge.py  load_knowledge_example.py  scheduled_knowledge_sync.py
src/ark_nav/: ark_nav_api.py  config.py  serve_app.py
src/ark_nav/core/models/: __init__.py  embedding_model.py  rag_models.py
src/ark_nav/core/services/: agent_pfm_kb_service.py  agent_platform_client.py  data_masking_service.py  data_pusher_service.py  dense_retriever.py  faiss_index_store.py  gpt_signature.py  hybrid_retriever.py  knowledge_base.py  knowledge_base_scheduler.py  llm_platform_client.py  open_ai_signature.py  rag_service.py  xiezhi_http.py
src/ark_nav/core/services/xiezhi/: auth.py  kb_client.py  llm_client.py  prompt_repository.py
src/ark_nav/core/utils/: agent_platform_config.py  broadcast_utils.py  http_client_manager.py  httpx_deployment_decorator.py  kb_config.py  llm_platform_config.py  masking_rules.py  nav_logger.py  trace_id_middleware.py
src/ark_nav/docs/: API_INVENTORY.md  ENV_INVENTORY.md  LOGGING_GUIDE.md  MODULE_MAP.md  README.md
src/ark_nav/domains/shouxian/: __init__.py  intent_classifier_advance.py  intent_classifier_advanced.py  intent_classifier_cot.py  intent_classifier_simple.py  intents.py  router_schemas.py  shouxian_api_router.py
src/ark_nav/domains/shouxian/agents/: __init__.py  intent_classify_agent.py  nav_agent.py
src/ark_nav/domains/shouxian/models/: bert.py
src/ark_nav/domains/shouxian/services/: shouxian_nav_service.py  shouxian_rag_service.py
src/ark_nav/domains/shouxian/services/shouxian/: _history_utils.py  bonus_chat_agent.py  bonus_chat_client.py  classify_service.py  intent_recognition.py  (+2 more)
src/ark_nav/domains/yanglaoxian/: __init__.py  prompts.py  router_schemas.py  ylx_api_router.py
src/ark_nav/domains/yanglaoxian/agents/: ylx_nav_agent.py
src/ark_nav/domains/yanglaoxian/services/: onekey_service.py
tests/: test_embedding_model.py  test_kb_mode_none.py  test_masking_rules.py  test_search_reject_reconfirm.py  test_shouxian_search_latency.py
