[project]
name = "ark-nav"
version = "0.2.0"
description = "Ark Navigator - 万能服务小导航服务(寿|养|证)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ray[default,serve,client]>=2.9.0",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "torch>=2.9.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "pycryptodome>=3.23.0",
    "pycryptodomex>=3.23.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
    "protobuf",
    "gunicorn>=23.0.0",
    "sentence-transformers>=5.2.0",
    "faiss-cpu>=1.13.2",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "tiktoken>=0.10.0",
    "sentencepiece>=0.2.0",
#    "ark-agentic>=0.3.1",
    "schedule>=1.2.2",
    "aiocache>=0.12.3"
]

[[tool.uv.index]]
name = "internal-pypi"
url = "https://pypi.org/simple"
default = true
